--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Star Wars</h1>
     <h3>Total de personajes <span id="total"></span></h3>
     <ul id="personajes"></ul>
-
+    <div id="planeta"></div>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
